refactor/artifacts/2026-04-24-shrink-pass-1/check_after_head_moved.txt
  [2m2026-04-24T22:07:05.916476Z[0m [33m WARN[0m [1;33mrch::hook[0m[33m: [33mexec called with non-compilation command: env 'CARGO_TARGET_DIR=/tmp/rch_target_copper_osprey' cargo check --all-targets[0m
    [2;3mat[0m rch/src/hook.rs:187 [2;3mon[0m ThreadId(1)

   Compiling beads_rust v0.1.45 (/data/projects/beads_rust)
error[E0308]: mismatched types
    --> src/sync/mod.rs:1845:13
     |
1844 |         require_safe_sync_overwrite_path(
     |         -------------------------------- arguments to this function are incorrect
1845 |             temp_path,
     |             ^^^^^^^^^ expected `&Path`, found `PathBuf`
     |
note: function defined here
    --> src/sync/path.rs:619:8
     |
 619 | pub fn require_safe_sync_overwrite_path(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 620 |     path: &Path,
     |     -----------
help: consider borrowing here
     |
1845 |             &temp_path,
     |             +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `beads_rust` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `beads_rust` (lib test) due to 1 previous error
